//syntax = "proto3";
//package proto; //包名和go中的必须一致
//option java_generic_services = true;
//option java_multiple_files = true;
//option java_package = "com.spw.proto";
//option java_outer_classname = "HelloWorldProto";
syntax = "proto3";
option java_multiple_files = false;
option java_package = "com.example.__gRPCClient";
option java_outer_classname = "HelloProto";
package hello;
//接口请求入参
message HelloRequest{
    string name  = 1;
}
//接口返回出参
message HelloReply{
    string message  = 1;
}
//定义接口
service Greeter{
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    //一个简单的rpc
    rpc HelloWorld(HelloRequest) returns (HelloReply){}
    //一个服务器端流式rpc
    rpc HelloWorldServerStream(HelloRequest) returns (stream HelloReply){}
    //一个客户端流式rpc
    rpc HelloWorldClientStream(stream HelloRequest) returns (HelloReply){}
    //一个客户端和服务器端双向流式rpc
    rpc HelloWorldClientAndServerStream(stream HelloRequest) returns (stream HelloReply){}
}