syntax = "proto3";
package grpc.health.v1;
//健康檢查收入
message HealthCheckRequest {
    string service = 1;
}
//健康檢查回傳
message HealthCheckResponse {
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
    }
    ServingStatus status = 1;
}
service Health{
    //檢查健康
    rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
    //查看
    rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}